# weave

./: .dockerignore  .eslintrc  .eslintrc.js  .flaskenv  .gitignore  .netlify  .pre-commit-config.yaml  .tool-versions  CITATION.md  Dockerfile  LICENSE  Makefile  Pipfile  README.md  TODO  Vagrantfile  app.json  app.py  emails.py  index.html  mypy.ini  package.json  pnpm-lock.yaml  provision.sh  pyproject.toml  pytest.ini  saml.py  server.py  servers.sh
.github/workflows/: eslint.yml  flake8.yml  flow.yml  jest.yml  main.yml  mypy.yml  pytest.yml  pythonpackage.yml  test-frontend.yml
.vagrant/machines/default/virtualbox/: action_provision  action_set_name  id  index_uuid  private_key  synced_folders  vagrant_cwd
public/: index.html
scripts/: context.py  populate.py  resetdb.py  servers.sh  shell.py
server/: __init__.py  admin.py  app.py  auth.py  cli.py  current_time.py  emails.py  models.py  queries.py  saml.py  schemas.py  session.py  views.py
server/email/: __init__.py  console_email_backend.py
server/emails/: __init__.py  console_email_backend.py  email_backend.py  sparkpost_email_backend.py
server/scripts/: context.py  populate.py  resetdb.py  servers.sh  shell.py
server/views/: __init__.py  api.py  auth.py  home.py  pagination.py
server/views/api/: __init__.py  blueprint.py  exceptions.py  student_profile.py  utils.py
src/: About.js  App.css  App.js  App.test.js  AppScreen.js  Browse.js  BrowseFaculty.js  BrowsePeerMentorship.js  Button.js  CadenceOption.js  CheckEmail.js  CheckboxIndicator.js  CreatableInputOnly.js  CreatableTagSelect.js  CreatePeerProfile.js  CreateProfile.js  EditFacultyProfile.js  EditProfile.js  EditStudentProfile.js  ExpectationCheckbox.js  ExpectationDisplay.js  Expectations.js  FAQ.js  FacultyCarousel.js  FacultyExpectations.js  FacultyInstitutionalAffiliationsForm.js  FacultyProfile.js  FacultyProfileForm.js  FacultyProfileResult.js  FacultyResultsView.js  FacultySlider.js  Help.js  Home.js  HomeActions.js  InstitutionalAffiliationsForm.js  Login.js  LoginCheckEmail.js  Logout.js  MenteeExpectations.js  MentorExpectations.js  (+57 more)
test/: razzi.json  tareq.json  test.fish  test_list.fish  test_token.fish
tests/: conftest.py  test_api.py  test_create_faculty_profile_custom_tag.py  test_create_minimal_student_profile.py  test_create_student_profile.py  test_custom_tag.py  test_get_account.py  test_get_profile.py  test_get_profiles.py  test_get_profiles_sorting.py  test_get_public_tags.py  test_logout.py  test_matching_faculty_profiles.py  test_matching_profiles.py  test_profiles_api.py  test_profiles_api_sorting.py  test_queries.py  test_query_profile_tags.py  test_query_searchable_tags.py  test_registration.py  test_star_profile.py  test_student_profile.py  test_update_availability.py  test_update_profile.py  test_update_student_profile.py  test_verify_token.py  utils.py
