[tool.poetry]
name = "weave"
version = "0.1.0"
description = "Weave is a mentorship platform for medical students."
authors = ["Razzi Abuissa <razzi@abuissa.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.3.2"
sentry-sdk = "^1.29.2"
flask-login = "^0.6.2"
structlog = "^23.1.0"
flask-admin = "^1.6.1"
sqlalchemy = "^2.0.20"
flask-basicauth = "^0.2.0"
flask-sqlalchemy = "^3.0.5"
python-dateutil = "^2.8.2"
requests = "^2.31.0"
requests-toolbelt = "^1.0.0"
cloudinary = "^1.34.0"
marshmallow = "^3.20.1"
psycopg2 = "^2.9.7"

[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
