[tool.poetry]
name = "weave"
version = "0.1.0"
description = "Weave is a mentorship platform for medical students."
authors = ["Razzi Abuissa <razzi@abuissa.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"
flask = "^3.1.3"
sentry-sdk = "^2.53.0"
flask-login = "^0.6.3"
structlog = "^25.5.0"
sqlalchemy = "^2.0.46"
flask-basicauth = "^0.2.0"
python-dateutil = "^2.9.0.post0"
requests = "^2.32.5"
requests-toolbelt = "^1.0.0"
cloudinary = "^1.44.1"
marshmallow = "^4.2.2"
pytz = "^2025.2"
flask-admin = "^2.0.2"
gunicorn = "^25.1.0"
psycopg = "^3.3.3"
flask-sqlalchemy = "^3.1.1"

[tool.poetry.group.dev.dependencies]
ipython = "^9.10.0"
python-dotenv = "^1.2.1"
pytest = "^9.0.2"
pytest-postgresql = "^8.0.0"
pytest-icdiff = "^0.9"
pdbpp = "^0.12.0.post1"
pip = "^26.0.1"
time-machine = "^3.2.0"
requests-mock = "^1.12.1"
flake8 = "^7.3.0"
mypy = "^1.19.1"
types-requests = "^2.32.4.20260107"
types-python-dateutil = "^2.9.0.20260124"
poethepoet = "^0.41.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
test = "pytest"
typecheck = "mypy app.py server/ tests/"
lint = "flake8 app.py server/ tests/"
